# procedural-city

./: Makefile  README.md  pc-backend.sh  procedural-city.cabal  procedural-city.sh  render.sh  stack.yaml
app/: Main.hs
data/example_cities/: city1.txt  city2.txt  city3.txt  city4.txt  test.txt
renderer/: renderer.pde
src/: City.hs
