name:                procedural-city
version:             0.1.0.0
synopsis:            Procedurally generate (VERY) simple cities
description:         Please see README.md
homepage:            https://github.com/medakk/procedural-city#readme
license:             MIT
license-file:        LICENSE
author:              medakk
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     City
  build-depends:       base >= 4.7 && < 5
                     , random
                     , normaldistribution ==1.1.*
  ghc-options:         -Wall
  default-language:    Haskell2010

executable procedural-city-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , procedural-city
                     , optparse-applicative ==0.12.*
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/procedural-city
